fixed spacing issue

--- a/swdocdemo/src/App.css
+++ b/swdocdemo/src/App.css
@@ -54,7 +54,7 @@ Container{
 }
 
 .docBody{
-  width: 100%;
+  width: 10%;
 }
 
 .backArrow{
